--- a/SetIPWindow.xaml
+++ b/SetIPWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="SCUNETLogin.SetIP"
+<Window x:Class="SCUNETLogin.SetIPWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:System.Collections;assembly=mscorlib"
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCUNETLogin"
         mc:Ignorable="d"
-      Title="SetIP" Width="480" Height="400" MinHeight="400" MinWidth="440">
+      Title="Set IP" Width="480" Height="400" MinHeight="400" MinWidth="440">
     <Window.Resources>
         <c:ArrayList x:Key="IPList">
         </c:ArrayList>
@@ -27,7 +27,6 @@
         <ListView Name="IPListView" Margin="8" Grid.ColumnSpan="4">
             <ListView.View>
                 <GridView ColumnHeaderToolTip="IP information">
-                    <GridViewColumn Header="ID" DisplayMemberBinding="{Binding ID}"></GridViewColumn>
                     <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}"></GridViewColumn>
                     <GridViewColumn Header="Default gateway" DisplayMemberBinding="{Binding DefaultGateway}"></GridViewColumn>
                     <GridViewColumn Header="Prefix length" DisplayMemberBinding="{Binding PrefixLength}"></GridViewColumn>
@@ -40,8 +39,8 @@
             <TextBox Name="IPTextBox" Width="120"/>
         </DockPanel>
         <DockPanel Margin="8,0,0,8" Grid.Row="2">
-            <TextBlock Text="Subnet musk: " Width="100"/>
-            <TextBlock Name="SubnetMuskTextBlock" Width="120"/>
+            <TextBlock Text="Prefix length: " Width="100"/>
+            <TextBlock Name="PrefixLengthTextBlock" Width="120"/>
         </DockPanel>
         <DockPanel Margin="8,0,0,8" Grid.Row="3">
             <TextBlock Text="Default gateway: " Width="100"/>
