--- a/SetIPWindow.xaml
+++ b/SetIPWindow.xaml
@@ -1,19 +1,15 @@
-<Window x:Class="SCUNETLogin.SetIPWindow"
+<Window x:Class="SCUNETLogin.SetIP"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCUNETLogin"
         mc:Ignorable="d"
-      Title="Set IP" Width="480" Height="400" MinHeight="400" MinWidth="440">
-    <Window.Resources>
-        <c:ArrayList x:Key="IPList">
-        </c:ArrayList>
-    </Window.Resources>
+      Title="SetIP" Width="520" Height="400" MinHeight="400" MinWidth="480">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -26,28 +22,46 @@
         </Grid.ColumnDefinitions>
         <ListView Name="IPListView" Margin="8" Grid.ColumnSpan="4">
             <ListView.View>
-                <GridView ColumnHeaderToolTip="IP information">
-                    <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}"></GridViewColumn>
-                    <GridViewColumn Header="Default gateway" DisplayMemberBinding="{Binding DefaultGateway}"></GridViewColumn>
-                    <GridViewColumn Header="Prefix length" DisplayMemberBinding="{Binding PrefixLength}"></GridViewColumn>
-                    <GridViewColumn Header="Start IP" DisplayMemberBinding="{Binding StartIP}"></GridViewColumn>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Location}">
+                        <GridViewColumn.Header>
+                            <GridViewColumnHeader Content="Location"
+                                                  ToolTip="Location of the router"/>
+                        </GridViewColumn.Header>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding DefaultGateway}">
+                        <GridViewColumn.Header>
+                            <GridViewColumnHeader Content="Default gateway"
+                                                  ToolTip="IP of the router"/>
+                        </GridViewColumn.Header>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding PrefixLength}">
+                        <GridViewColumn.Header>
+                            <GridViewColumnHeader Content="Prefix length"
+                                                  ToolTip="A integer which defines the local subnet size"/>
+                        </GridViewColumn.Header>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <DockPanel Margin="8,0,0,8" Grid.Row="1">
+        <DockPanel Margin="8" Grid.Row="1" Grid.ColumnSpan="2">
+            <TextBlock Text="WiFi adapter: "/>
+            <ComboBox Name="WiFiAdapterComboBox" Grid.Row="1"/>
+        </DockPanel>
+        <DockPanel Margin="8,0,0,8" Grid.Row="2">
             <TextBlock Text="IP address: " Width="100"/>
             <TextBox Name="IPTextBox" Width="120"/>
         </DockPanel>
-        <DockPanel Margin="8,0,0,8" Grid.Row="2">
-            <TextBlock Text="Prefix length: " Width="100"/>
+        <DockPanel Margin="8,0,0,8" Grid.Row="3">
+            <TextBlock Text="Subnet musk: " Width="100"/>
             <TextBlock Name="PrefixLengthTextBlock" Width="120"/>
         </DockPanel>
-        <DockPanel Margin="8,0,0,8" Grid.Row="3">
+        <DockPanel Margin="8,0,0,8" Grid.Row="4">
             <TextBlock Text="Default gateway: " Width="100"/>
             <TextBlock Name="DefaultGatewayTextBlock" Width="120"/>
         </DockPanel>
-        <Button Name="GenerateIPButton" Grid.Row="1" Grid.Column="1" Margin="8,0,8,8" Width="80" Content="Generate IP"/>
-        <Button Name="ApplyButton" Grid.Row="2" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="Apply"/>
-        <Button Name="OKButton" Grid.Row="3" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="OK"/>
+        <Button Name="GenerateIPButton" Grid.Row="2" Grid.Column="1" Margin="8,0,8,8" Width="80" Content="Generate IP"/>
+        <Button Name="ApplyButton" Grid.Row="3" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="Apply"/>
+        <Button Name="OKButton" Grid.Row="4" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="OK"/>
     </Grid>
 </Window>
