--- a/ui/MainWindow.xaml
+++ b/ui/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCUNETLogin"
-        mc:Ignorable="d"
         Title="SCUNET Helper" Height="400" Width="320" MinHeight="360" MinWidth="240">
     <Window.Resources>
         <Style TargetType="Button">
@@ -26,7 +25,8 @@
                 ToolTip="Turn on the WiFi and connect to SCUNET"/>
         <Button Name="SetStaticIPButton">
             <StackPanel Orientation="Horizontal">
-                <Image Name="SetStaticIPImage"/>
+                <Image Name="SetStaticIPImage" 
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"/>
                 <TextBlock Text=" Set static IP"/>
             </StackPanel>
         </Button>
