--- a/ui/SetIPWindow.xaml
+++ b/ui/SetIPWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCUNETLogin"
-        mc:Ignorable="d"
       Title="SetIP" Width="520" Height="400" MinHeight="400" MinWidth="480">
-    <Grid>
+      <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -20,7 +20,8 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <ListView Name="IPListView" Margin="8" Grid.ColumnSpan="4">
+        <TextBlock Margin="8,8,0,0" Text="Please select a location first:"/>
+        <ListView Name="IPListView" Margin="8" Grid.ColumnSpan="4" Grid.Row="1">
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Location}">
@@ -44,24 +45,24 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <DockPanel Margin="8" Grid.Row="1" Grid.ColumnSpan="2">
+        <DockPanel Margin="8" Grid.Row="2" Grid.ColumnSpan="2">
             <TextBlock Text="WiFi adapter: "/>
             <ComboBox Name="WiFiAdapterComboBox" Grid.Row="1"/>
         </DockPanel>
-        <DockPanel Margin="8,0,0,8" Grid.Row="2">
+        <DockPanel Margin="8,0,0,8" Grid.Row="3">
             <TextBlock Text="IP address: " Width="100"/>
             <TextBox Name="IPTextBox" Width="120"/>
         </DockPanel>
-        <DockPanel Margin="8,0,0,8" Grid.Row="3">
+        <DockPanel Margin="8,0,0,8" Grid.Row="4">
             <TextBlock Text="Subnet musk: " Width="100"/>
             <TextBlock Name="PrefixLengthTextBlock" Width="120"/>
         </DockPanel>
-        <DockPanel Margin="8,0,0,8" Grid.Row="4">
+        <DockPanel Margin="8,0,0,8" Grid.Row="5">
             <TextBlock Text="Default gateway: " Width="100"/>
             <TextBlock Name="DefaultGatewayTextBlock" Width="120"/>
         </DockPanel>
-        <Button Name="GenerateIPButton" Grid.Row="2" Grid.Column="1" Margin="8,0,8,8" Width="80" Content="Generate IP"/>
-        <Button Name="ApplyButton" Grid.Row="3" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="Apply"/>
-        <Button Name="OKButton" Grid.Row="4" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="OK"/>
+        <Button Name="GenerateIPButton" Grid.Row="3" Grid.Column="1" Margin="8,0,8,8" Width="80" Content="Generate IP"/>
+        <Button Name="ApplyButton" Grid.Row="4" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="Apply"/>
+        <Button Name="OKButton" Grid.Row="5" Grid.Column="3" Margin="0,0,8,8" Width="80" Content="OK"/>
     </Grid>
 </Window>
